Don't add nonexisting files to blocklist

Until now, any files to be removed from the database which were not
deleted or moved to trash were added to the block list.
In reality, this leads to the blocklist growing larger than needed. The
only reason to add files to the block list is when they are existing
files in the image directory that should be ignored. If the files are
not on disk (usually because they are deleted outside of kphotoalbum),
there's no need to prevent them from being re-added.

BUG: 512207